cmake_minimum_required(VERSION 2.6)

set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
add_definitions(-Wall -std=c++17)
include_directories(.)
add_library(points points.cpp)
add_library(generator generator.cpp)
add_library(graph graph.cpp)
add_library(native_solver nativeVoyagerSolver.cpp)
add_library(first_solver firstVoyagerSolver.cpp)
add_library(second_solver secondVoyagerSolver.cpp)
add_executable(executeTests voyager_test.cpp)
target_link_libraries(graph points)
target_link_libraries(native_solver points graph)
target_link_libraries(first_solver points graph)
target_link_libraries(generator points graph)
target_link_libraries(executeTests PUBLIC points graph generator native_solver first_solver second_solver)
